--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:dev": "nodemon server/index.js"
+    "start:dev": "nodemon ./server/index.js",
+    "start": "node ./server/index.js",
+    "seed": "node ./server/seed.js",
+    "seed:dev": "nodemon ./server/seed.js"
   },
   "keywords": [],
   "author": "",
